# backend/src/main/java/app/belay/route/ClimbType.java
@@ -1,0 +1,6 @@
+package app.belay.route;
+
+public enum ClimbType {
+    BOULDER,
+    ROPE
+}
